# spell_check

./: .spellcheckignore  Cargo.toml  README.md  spellcheck.toml
docs/: README.md  architecture.md  configuration.md  usage.md
examples/: cpp.toml  go.toml  javascript.toml  python.toml  rust.toml
src/: cli.rs  config.rs  config_schema.rs  dictionary.rs  engine.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs
src/dictionary/: mod.rs
src/engine/: mod.rs
tests/: integration.rs
tests/fixtures/proj1/: README.md  custom.toml
tests/fixtures/proj1/src/: main.rs
