[package]
name = "spell_check"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
globset = "0.4.18"
ignore = "0.4.25"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"

[dev-dependencies]
tempfile = "3.24.0"
